Fix for bug 88024: Down arrow key creates fake line break at the end of a TEXTAREA

Modified CompleteMove() to prevent selection from being placed
after the last BR in the content tree.

r=brade@netscape.com  sr=sfraser@netscape.com